--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Panda Commerce</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
     <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
@@ -45,7 +47,8 @@
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
                                     <h1>Mega LCD TV For Sports</h1>
-                                    <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                                    <p>This is the best tv in the world for people who just want to waste time in front
+                                        of tv.</p>
                                     <h1>$1200</h1>
                                     <div class="btn btn-primary">Buy Now</div>
                                 </div>
@@ -60,7 +63,8 @@
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
                                     <h1>X-Box for your living room</h1>
-                                    <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                                    <p>This is the best x-box in the world for people who just want to waste time in
+                                        front of fake sports.</p>
                                     <h1>$600</h1>
                                     <div class="btn btn-primary">Buy Now</div>
                                 </div>
@@ -75,7 +79,8 @@
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
                                     <h1>Cool Dude Headphone</h1>
-                                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
                                     <h1>$420</h1>
                                     <div class="btn btn-primary">Buy Now</div>
                                 </div>
@@ -85,13 +90,15 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -122,7 +129,7 @@
                             <img src="images/categories/shoes.png" alt="">
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
@@ -136,7 +143,8 @@
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Supply 350</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
                                 content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3 p-3">
@@ -149,7 +157,8 @@
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
                         </div>
                         <div class="m-3 p-3">
                             <div class="btn btn-danger">Buy now >></div>
@@ -161,8 +170,10 @@
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                                content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This card has even longer content than the first to show that equal height
+                                action.</p>
                         </div>
                         <div class="m-3 p-3">
                             <div class="btn btn-danger">Buy now >></div>
@@ -173,7 +184,64 @@
 
         </section>
         <!-- sheos section end -->
+        <!-- backpack section start  -->
+        <section class="container my-5">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+
+                            <h2>$120</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3 p-3">
+                            <div class="btn btn-danger">Buy now >></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+
+                            <h2>$320</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+                        <div class="m-3 p-3">
+                            <div class="btn btn-danger">Buy now >></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h2>$169</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This card has even longer content than the first to show that equal height
+                                action.</p>
+                        </div>
+                        <div class="m-3 p-3">
+                            <div class="btn btn-danger">Buy now >></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- backpack section end -->
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
