--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- custom css  -->
+    <link rel="stylesheet" href="custom css/style.css">
 </head>
 
 <body>
@@ -42,7 +44,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded p-5 bg-info">
+                    <div class="carousel-item active border rounded p-5 panda-bg-info">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -50,7 +52,7 @@
                                     <p>This is the best tv in the world for people who just want to waste time in front
                                         of tv.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-primary">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -58,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded p-5 bg-info">
+                    <div class="carousel-item active border rounded p-5 panda-bg-info">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -66,7 +68,7 @@
                                     <p>This is the best x-box in the world for people who just want to waste time in
                                         front of fake sports.</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-primary">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -74,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded p-5 bg-info">
+                    <div class="carousel-item active border rounded p-5 panda-bg-info">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -82,7 +84,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-primary">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -110,7 +112,7 @@
         <!-- categories start -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-4 categories">
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
                             <h1 class="text-white">Watch</h1>
@@ -150,7 +152,7 @@
 
                         <div class="m-3 p-1">
                             <h2>$120</h2>
-                            <div class="btn btn-danger">Buy now >></div>
+                            <div class="btn panda-btn-buy-now">Buy now >></div>
                         </div>
                     </div>
                 </div>
@@ -165,7 +167,7 @@
 
                         <div class="m-3 p-1">
                             <h2>$320</h2>
-                            <div class="btn btn-danger">Buy now >></div>
+                            <div class="btn panda-btn-buy-now">Buy now >></div>
                         </div>
                     </div>
                 </div>
@@ -182,7 +184,7 @@
 
                         <div class="m-3 p-1">
                             <h2>$3500</h2>
-                            <div class="btn btn-danger">Buy now >></div>
+                            <div class="btn panda-btn-buy-now">Buy now >></div>
                         </div>
                     </div>
                 </div>
@@ -206,7 +208,7 @@
                                 content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3 p-1">
-                            <div class="btn btn-danger">Buy now >></div>
+                            <div class="btn panda-btn-buy-now">Buy now >></div>
                         </div>
                     </div>
                 </div>
@@ -222,7 +224,7 @@
                             </p>
                         </div>
                         <div class="m-3 p-1">
-                            <div class="btn btn-danger">Buy now >></div>
+                            <div class="btn panda-btn-buy-now">Buy now >></div>
                         </div>
                     </div>
                 </div>
@@ -238,7 +240,7 @@
                                 action.</p>
                         </div>
                         <div class="m-3 p-1">
-                            <div class="btn btn-danger">Buy now >></div>
+                            <div class="btn panda-btn-buy-now">Buy now >></div>
                         </div>
                     </div>
                 </div>
@@ -248,7 +250,7 @@
         <!-- backpack section end -->
         <!-- Subscribe start  -->
         <section style="height: 300px"
-            class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="subscribe">
+            class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info" id="subscribe">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
@@ -258,7 +260,7 @@
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
                 </form>
             </div>
         </section>
